# substiify-v2

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  compose.yaml  docker-compose.yaml  example.env  main.py  package.json  pyproject.toml  requirements.txt  start.sh
.github/workflows/: build.yaml
bot/: main.py
bot/cogs/: feedback.py  free_games.py  fun.py  help.py  karma.py  music.py  owner.py  util.py
bot/core/: bot.py  config.py.example  config_example.py  events.py  values.py  version.py
bot/db/: CreateDatabase.sql
bot/utils/: CustomLogger.py  art.txt  colors.py  custom_logger.py  db.py  db_migrate.py  util.py
classes/free_games/: __init__.py  epic.py  steam.py  types.py
core/: __init__.py  bot.py  config.py  config.py.example  constants.py  custom_logger.py  events.py
database/: __init__.py  db_constants.py
extensions/: __init__.py  feedback.py  free_games.py  fun.py  help.py  karma.py  music.py  owner.py  url_cleaner.py  url_rules.py  util.py
extensions/free_games/: __init__.py  base.py  epic_games.py  steam.py
helper/: CustomLogFormatter.py  LastMessageList.py  LavalinkVoiceClient.py  ModulesManager.py
helper/music/: LavalinkVoiceClient.py  player.py  queue.py
modules/: duel.py  freeGames.py  free_games.py  fun.py  giveaway.py  help.py  karma.py  mainbot.py  music.py  owner.py  rank.py  submit.py  util.py  votes.py
resources/: CreateDatabase.sql  db_backup.sh
resources/db_conversion/: ConvertDatabaseVersion1.sql
resources/lavalink/: application.yml
src/: index.ts
utils/: __init__.py  colors.py  db.py  general.py  log_util.py  store.py  ui.py  url_rules.py  util.py
utils/ux/: __init__.py  art.txt  colors.py
